--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
         android:layout_marginTop="36dp"
         android:background="#FFFBD5"
         android:contextClickable="true"
-        android:text="Functions"
+        android:text="Debug"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
@@ -88,6 +88,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="199dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="104dp"
+        android:background="#F3CFFA"
+        android:text="Function"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/communicationsConfig" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
