--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
         android:layout_marginEnd="104dp"
         android:layout_marginBottom="372dp"
         android:background="#CEF5FA"
+        android:clickable="false"
         android:text="Bluetooth"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
