--- a/app/src/main/res/layout/activity_functions.xml
+++ b/app/src/main/res/layout/activity_functions.xml
@@ -1,132 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CommunicationsConfig">
+    tools:context=".FunctionsActivity">
 
     <TextView
         android:id="@+id/firstFunction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:text="Function 1"
-        android:textSize="20dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginStart="37dp"
+        android:layout_marginLeft="37dp"
+        android:layout_marginTop="59dp"
+        android:text="Function #1"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/label1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="56dp"
         android:text="Label"
-        android:textSize="20dp"
-        android:layout_below="@id/firstFunction"
-        android:layout_marginLeft="40dp"
-        android:layout_alignTop="@id/firstLabelValue"
-        android:layout_alignBottom="@id/firstLabelValue"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/firstFunction" />
 
     <EditText
         android:id="@+id/firstLabelValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
-        android:layout_toRightOf="@id/label1"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="87dp"
-        android:layout_below="@id/firstFunction"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/firstFunction" />
 
     <TextView
         android:id="@+id/function1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="68dp"
         android:text="Function"
-        android:textSize="20dp"
-        android:layout_below="@id/label1"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="40dp"
-        android:layout_alignTop="@id/firstFunctionValue"
-        android:layout_alignBottom="@id/firstFunctionValue"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/label1" />
 
     <EditText
         android:id="@+id/firstFunctionValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="48dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
-        android:layout_marginTop="20dp"
-        android:layout_toRightOf="@id/function1"
-        android:layout_marginLeft="60dp"
-        android:layout_below="@id/firstLabelValue"/>
+        app:layout_constraintStart_toStartOf="@+id/firstLabelValue"
+        app:layout_constraintTop_toBottomOf="@+id/firstLabelValue" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="306dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginBottom="339dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/secondFunction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:text="Function 2"
-        android:textSize="20dp"
-        android:layout_below="@id/function1"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="376dp"
+        android:text="Function #2"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/label2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="376dp"
         android:text="Label"
-        android:textSize="20dp"
-        android:layout_below="@id/secondFunction"
-        android:layout_marginLeft="40dp"
-        android:layout_alignTop="@id/secondLabelValue"
-        android:layout_alignBottom="@id/secondLabelValue"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/firstFunction" />
 
     <EditText
         android:id="@+id/secondLabelValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="352dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
-        android:layout_toRightOf="@id/label2"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="87dp"
-        android:layout_below="@id/secondFunction" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/firstFunction" />
 
 
     <TextView
         android:id="@+id/function2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="388dp"
         android:text="Function"
-        android:textSize="20dp"
-        android:layout_below="@id/label2"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="40dp"
-        android:layout_alignTop="@id/secondFunctionValue"
-        android:layout_alignBottom="@id/secondFunctionValue"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/label1" />
 
     <EditText
         android:id="@+id/secondFunctionValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="368dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:layout_marginTop="20dp"
-        android:layout_toRightOf="@id/function2"
-        android:layout_marginLeft="60dp"
-        android:layout_below="@id/secondLabelValue"
-        />
+        android:text=""
+        app:layout_constraintStart_toStartOf="@+id/firstLabelValue"
+        app:layout_constraintTop_toBottomOf="@+id/firstLabelValue" />
 
     <Button
         android:id="@+id/savePreferences"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/secondFunctionValue"
-        android:layout_marginTop="59dp"
-        android:text="Save Configurations" />
-</RelativeLayout>
+        android:layout_marginBottom="37dp"
+        android:background="#87ceeb"
+        android:drawableLeft="@drawable/ic_save"
+        android:padding="10dp"
+        android:text="Save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider"
+        app:layout_constraintVertical_bias="0.908" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
