--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,21 +11,21 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/title_welcome"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextTextPersonName"
+    <TextView
+        android:id="@+id/title_welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#EDEDED"
+        android:text="Welcome to MDP!"
+        android:textSize="30sp"
         android:layout_marginStart="113dp"
         android:layout_marginTop="35dp"
         android:layout_marginEnd="89dp"
         android:layout_marginBottom="185dp"
-        android:background="#E3E4EA"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Welcome to MDP"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textStyle="bold"
