--- a/app/src/main/res/layout/activity_robot_control.xml
+++ b/app/src/main/res/layout/activity_robot_control.xml
@@ -374,10 +374,11 @@
         android:layout_width="129dp"
         android:layout_height="67dp"
         android:textAlignment="center"
-        android:textOff="AUTO"
-        android:textOn="MANUAL"
+        android:textOff="MANUAL"
+        android:textOn="AUTO"
         android:textSize="24sp"
-
+        android:background="#010203"
+        android:textColor="#FFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -482,7 +483,7 @@
         android:layout_marginTop="3dp"
         android:background="@drawable/rectangle_border"
         android:scrollbars="vertical"
-        android:text="no sent message"
+        android:text="No sent message"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toStartOf="@+id/receivedMessage"
@@ -512,7 +513,7 @@
         android:layout_marginBottom="20dp"
         android:background="@drawable/rectangle_border"
         android:scrollbars="vertical"
-        android:text="no received message"
+        android:text="No received message"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -527,6 +528,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="464dp"
         android:text="Tilt"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.866"
