--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="200dp"
+        android:lineSpacingExtra="30sp"
         android:text="Disconnected"
         android:textColor="@android:color/white"
         android:textSize="10sp" />
